@@ -18,7 +18,9 @@ PHP                                                                        NEWS
   (Scott)
 - Fixed a crash on invalid method in ReflectionParameter constructor.
   (Christian Seiler)
-- Fixed buf #46053 (SplFileObject::seek - Endless loop). (Arnaud)
+- Fixed bug #46059 (Compile failure under IRIX 6.5.30 building posix.c). 
+  (Arnaud)
+- Fixed bug #46053 (SplFileObject::seek - Endless loop). (Arnaud)
 - Fixed bug #46051 (SplFileInfo::openFile - memory overlap). (Arnaud)
 - Fixed bug #46047 (SimpleXML converts empty nodes into object with nested 
   array). (Rob)
